# python-template

./: .gitignore  README.md  README.template.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
package_name/: __init__.py  config.py
package_name/services/: cli_1.py
root_django/: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  requirements.dev.txt  requirements.txt
root_django/project/project/: settings.py  urls.py  wsgi.py
root_django/project/users/: admin.py  models.py
root_django/project/users/migrations/: 0001_initial.py
root_django/services/: api.sh
